# stm32-tcp-serial

./: Cargo.toml  Readme.md  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
