[package]
name = "stm32-tcp-serial"
version = "0.1.0"
edition = "2021"
default-run = "stm32-tcp-serial"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Change stm32f407vg to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f407vg", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"]  }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.4.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "task-arena-size-98304"] }
embassy-time = { version = "0.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", features = ["defmt"]}
embassy-net = { version = "0.3", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", ] }
embassy-futures = { version = "0.1.0"}

defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-io-async = { version = "0.6.1" }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2"

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "8739c67edf8f609357f95307716e6524d79e0340" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "8739c67edf8f609357f95307716e6524d79e0340" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "8739c67edf8f609357f95307716e6524d79e0340" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "8739c67edf8f609357f95307716e6524d79e0340" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "8739c67edf8f609357f95307716e6524d79e0340" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "8739c67edf8f609357f95307716e6524d79e0340" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "8739c67edf8f609357f95307716e6524d79e0340" }

[profile.release]
debug = 2
